Fixed whitespace on right side of website

--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,13 @@
 
 body {
   width: 100%;
-  top: 0px;
-  margin-top: 0px;
-  margin-left: 0px;
+  margin-top: 0%;
+  margin-left: 0%;
+  margin-right: 0%;
   padding-top: 0%;
-  padding-left: 0px;
+  padding-left: 0%;
+  padding-right: 0%;
+  overflow-x: hidden; 
 }
 
 .pic {
